--- a/web/package.json
+++ b/web/package.json
@@ -9,11 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@algorandfoundation/algokit-utils": "^6.0.2",
+    "@blockshake/defly-connect": "^1.1.6",
     "@burnt-labs/abstraxion": "^1.0.0-alpha.50",
+    "@daffiwallet/connect": "^1.0.3",
+    "@perawallet/connect": "^1.3.1",
+    "@txnlab/use-wallet": "^2.4.0",
+    "@walletconnect/modal-sign-html": "^2.6.1",
+    "algosdk": "^2.7.0",
+    "daisyui": "^4.0.0",
+    "framer-motion": "^11.11.11",
     "graphql": "^16.9.0",
+    "lucide-react": "^0.454.0",
     "next": "14.2.13",
+    "notistack": "^3.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
